--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -5,9 +5,7 @@ api-version: '1.20'
 description: Enhance multiplayer experience with random teleportation within specified regions.
 authors:
   - anshxx
-  - darkxx
-website: https://xyris.fun/
-prefix: Xyris
+  - sathvikxx
 depend:
   - WorldGuard
   - WorldEdit
